# kokoro-voiceopt

./: .gitignore  README.md  config.yaml  pyproject.toml
scripts/: optimize_voice.py
src /kokoro-voiceopt/: manifold.py  objective.py  speaker.py  textplan.py
src/kokoro_voiceopt/: __init__.py  artifacts.py  assets.py  audio.py  cli.py  config.py  corpus.py  data.py  doctor.py  io.py  manifold.py  objective.py  pipeline.py  profile.py  search.py  serde.py  services.py  speaker.py  synth.py  textplan.py  transcript.py  voice.py
tests/: test_voiceopt_corpus.py  test_voiceopt_integration_smoke.py  test_voiceopt_manifold.py  test_voiceopt_search.py  test_voiceopt_textplan.py
